add lars name to vignette

--- a/vignettes/usage-newsanchor.html
+++ b/vignettes/usage-newsanchor.html
@@ -10,9 +10,9 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<meta name="author" content="Correlaid" />
+<meta name="author" content="Lars Schulze lars.schulze@hotmail.com" />
 
-<meta name="date" content="2018-11-27" />
+<meta name="date" content="2018-12-12" />
 
 <title>Usage of newsanchor</title>
 
@@ -69,8 +69,8 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 
 
 <h1 class="title toc-ignore">Usage of newsanchor</h1>
-<h4 class="author"><em>Correlaid</em></h4>
-<h4 class="date"><em>2018-11-27</em></h4>
+<h4 class="author"><em>Lars Schulze <a href="mailto:lars.schulze@hotmail.com">lars.schulze@hotmail.com</a></em></h4>
+<h4 class="date"><em>2018-12-12</em></h4>
 
 
 
